# facelib_modular_face_recognition_pipline

./: LICENSE  README.md  facecore.py  mkdocs.yml  person_face.py  preprocessing.py  pyproject.toml  validation_on_lfw.py
.github/workflows/: docs-pages.yml  publish-pypi.yml
aligners/: align_2d.py  align_base.py
aligners/align2d/: facealigner.py  helpers.py
data/arcface/: 1.jfif-monica.pkl  1.jfif-phebe.pkl  1.jpg-chandler.pkl  1.jpg-rachel.pkl  1.jpg-ross.pkl
data/facenet/: 1.jfif-monica.pkl  1.jfif-phebe.pkl  1.jpg-chandler.pkl  1.jpg-rachel.pkl  1.jpg-ross.pkl
detectors/: detector_base.py  detector_dlib.py  detector_lffd.py  detector_mtcnn.py
detectors/dlib/: readme.txt
detectors/lffd/: predict.py
detectors/mtcnn/: mtcnn_detect_face.py
docs/: CNAME  align_2d.html  align_base.html  conf.html  detector_base.html  detector_dlib.html  detector_mtcnn.html  faceapp.html  facecore.html  facematch.html  genindex.html  iface.html  index.html  index.md  modules.html  objects.inv  person_face.html  preprocessing.html  process_labeled_data.html  py-modindex.html  recognize_models.html  recognizer_arcface.html  recognizer_base.html  recognizer_facenet.html  search.html  searchindex.js  sort.html
docs-v2/: api.md  index.md  usage.md
docs/_sources/: align_2d.rst.txt  align_base.rst.txt  conf.rst.txt  detector_base.rst.txt  detector_dlib.rst.txt  detector_mtcnn.rst.txt  (+14 more)
examples/: v2_quickstart.py
recognizers/: facematch.py  recognize_models.py  recognizer_arcface.py  recognizer_base.py  recognizer_facenet.py
tests/: test_v2_pipeline.py
tracking/: sort.py
(+13 files in other folders)
